kubernetes/workloads/templates/uptime-kuma/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma-service
  namespace: $WORKLOAD_NAMESPACE
  labels:
    app: uptime-kuma
    app.kubernetes.io/name: uptime-kuma
    app.kubernetes.io/part-of: ztc-workloads
spec:
  selector:
    app: uptime-kuma
  ports:
  - name: http
    port: 80
    targetPort: 3001
    protocol: TCP
  type: ClusterIP
